--- a/hack.html
+++ b/hack.html
@@ -27,22 +27,22 @@
         <div id="test">
         </div>
         <section id="bingo">
-            <button id="but1">Gå tur mens du hører en episode av ITSimpelthen</button>
-            <button id="but2">Gå rundt et vann</button>
-            <button id="but3">Gå på historisk område</button>
-            <button id="but4">Gå langs en elv</button>
-            <button id="but5">Gå et sted du ikke har vært før</button>
-            <button id="but6">Gå i en park</button>
-            <button id="but7">Gå en lang tur</button>
-            <button id="but8">Invitér en du ikke prater med så mye ellers på tur</button>
-            <button id="but9">Spise lunsj ute</button>
-            <button id="but10">Legg ut bilde av at du gikk tur på Slack (#trim-bevis)</button>
-            <button id="but11">Si hei til en fremmed på tur</button>
-            <button id="but12">Gå til en statue</button>
-            <button id="but13">Gå tur helt uten å bruke mobiltelefonen</button>
-            <button id="but14">Gå en tur raskt</button>
-            <button id="but15">Gå tur mens du snakker med en kollega</button>
-            <button id="but16">Gå tur i dårlig vær</button>
+            <button id="but17">Gå tur mens du hører en episode av ITSimpelthen</button>
+            <button id="but18">Gå et sted du ikke gikk i januar</button>
+            <button id="but19">Gå en morgentur</button>
+            <button id="but20">Gå tur langs med vannet</button>
+            <button id="but21">Gå et turtips fra en annen kollega</button>
+            <button id="but22">Gå i en park</button>
+            <button id="but23">Gå en lang tur</button>
+            <button id="but24">Gå en kveldstur</button>
+            <button id="but25">Spise lunsj ute</button>
+            <button id="but26">Legg ut bilde av at du gikk tur på Slack (#trim-bevis)</button>
+            <button id="but27">Si hei til en fremmed på tur</button>
+            <button id="but28">Gå et helt nytt sted</button>
+            <button id="but29">Gå en måneskinnstur</button>
+            <button id="but30">(Surpriserute) Avsløres senere</button>
+            <button id="but31">Gå tur mens du snakker med en kollega</button>
+            <button id="but31">Valgfri rute</button>
         </section>
         <script>
             const wrapper = document.getElementById("bingo")
