reveal secret square

--- a/hack.html
+++ b/hack.html
@@ -40,9 +40,12 @@
             <button id="but27">Si hei til en fremmed på tur</button>
             <button id="but28">Gå et helt nytt sted</button>
             <button id="but29">Gå en måneskinnstur</button>
-            <button id="but30">(Surpriserute) Avsløres senere</button>
+            <button id="but30">Gå tur og ta bilde av noe som minner deg om en av IT-ambisjonene og del det i #it_ambisjoner</button>
             <button id="but31">Gå tur mens du snakker med en kollega</button>
             <button id="but32">Valgfri rute</button>
+        </section>
+        <section>
+            Om du ikke har pugga de: <a href="https://navno.sharepoint.com/sites/enhet-it-avdelingen/SitePages/V%C3%A5re-ambisjoner.aspx">IT ambisjoner 2021-2024</a>
         </section>
         <script>
             const wrapper = document.getElementById("bingo")
